k8s/base/admin-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-backend
  template:
    metadata:
      labels:
        app: admin-backend
    spec:
      containers:
        - name: admin-backend
          image: cinestar-admin-backend
          ports:
            - containerPort: 5000
