k8s/base/admin-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-frontend
  template:
    metadata:
      labels:
        app: admin-frontend
    spec:
      containers:
        - name: admin-frontend
          image: cinestar-admin-frontend
          ports:
            - containerPort: 80
