k8s/base/admin-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-backend
spec:
  selector:
    app: admin-backend
  ports:
    - port: 5000
      targetPort: 5000
