k8s/base/admin-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-frontend
spec:
  selector:
    app: admin-frontend
  ports:
    - port: 80
      targetPort: 80
